--- a/khushi/form/navigation.html
+++ b/khushi/form/navigation.html
@@ -3,43 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>navigation</title>
+    <title>navigation </title>
+    <link rel="stylesheet" href="../../css/navigation.css">
 </head>
 <body>
-<nav>
-    <div class="img_logo">
-        <img src="../../react-logo-svgrepo-com.svg">
-        <h1>MY <br> LOGO</h1>
-    </div>
-    <div class="nav_list">
-        <ul>
-            <li>Home</li>
-            <li>about</li>
-            <li>contact</li>
-            <li>sing</li>
-        </ul>
-    </div>
-    <div class="dropDown">
-        <select value="name" id="">
-            <option>india</option>
-            <option>pakistan</option>
-            <option>london</option>
-            <option>usa</option>
-        </select>
-    </div>
-    <div class="proile">
-        <img src="https://e7.pngegg.com/pngimages/980/304/png-clipart-computer
-        -icons-user-profile-avatar-heroes-silhouette.png">
-    </div>
+    <nav>
+        <div class="img_logo">
+            <img src="../../react-logo-svgrepo-com.svg">
+            <h1>YOUR<br> COMPANY</h1>
+        </div>
+         <div class="nav_list">
+            <ul>
+                <li>HOME</li>
+                <li>ABOUT</li>
+                <li>CONTACT</li>
+                <li>SING</li>
+            </ul>
+        </div>
+        <div class="dropdown">
+            <select class="dropdown">
+                <option value="india">india</option>
+                <option value="pakistan">pakistan</option>
+                <option value="london">london</option>
+                <option value="usa">usa</option>
+                <option value="pune">pune</option>
 
-    
+            </select>
+        </div>
+        <div class="profile">
+            <img src="../../css/cool-monkey-logo-design-illustrator-free-vector.jpg">
+        </div>
 
-
-
-
-
-
-
-</nav>
+    </nav>
 </body>
 </html>
