--- a/Form/form.html
+++ b/Form/form.html
@@ -8,9 +8,6 @@
         form {
              background-color: aqua;
         }
-        input{
-            color:black;
-            background-color: brown;
             
         }
         select{
@@ -20,6 +17,13 @@
         button {
             background-color: blue;
             color: aliceblue;
+        }
+        input[placeholder] {
+           width: 200px;
+           height: 20px;
+           color: yellow;
+           font-size: 15px;
+
         }
         
     </style>
