--- a/wedsite/Project.html
+++ b/wedsite/Project.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../css/Project.css">
 </head>
 <body>
-    <div class="parents_1">
+    <!--div class="parents_1"-->
         <div class="main">
         <nav>
           <div class="nav_1">
@@ -38,7 +38,7 @@
 
         </div>
         </div>
-        
+        <div class="parents_3">
         <div class="parents_2">
                 <img src="../css/national bank.jpg" class="img_1">
                 <img src="../css/mattered.jpg" class="img_2">
@@ -47,7 +47,7 @@
                 <img src="../css/subway.png" class="img_5">
                 <img src="../css/codecademy.webp" class="img_6">
         </div>
-        <div class="parents_3">
+       
         <div class="text_2">
             Collaborate with brands and agencies<br>to creat impactful results.
         </div>
@@ -83,6 +83,6 @@
                 <p>individuals with a<br> passion for creativity,<br> problem-solving, and technology.</p>
             </div>
         </div>
-    </div>
+    <!--/div-->
 </body>
 </html>
