--- a/khushi/form/multipages.html
+++ b/khushi/form/multipages.html
@@ -7,23 +7,27 @@
     <link rel="stylesheet" href="../../css/multipages.css">
 </head>
 <body>
-    <div class="logo">
-        <img src="../../react-logo-svgrepo-com.svg">
-    </div>
-    <div class="container">
-        <button class="left_arrow">
-            <img src="../form/arrow.png">
-        </button>
-        <button class="active">1</button>
-        <button class="btn">2</button>
-        <button class="btn">3</button>
-        <button class="btn">4</button>
-        <button class="btn">5</button>
-        <button class="btn">6</button>
-        <button class="btn">7</button>
-        <button class="btn">8</button>
-        <button class="btn">9</button>
-        <button class="btn">10</button>
-        </div>
+
+        <div class="logo">
+            <img src="../../react-logo-svgrepo-com.svg">
+          </div>
+          <div class="container">
+            <button class="left_arrow">
+              <img src="../form/arrow.png"alt="left_arraow"/>
+            </button>
+            <button class="active">1</button>
+            <button class="btn">2</button>
+            <button class="btn">3</button>
+            <button class="btn">4</button>
+            <button class="btn">5</button>
+            <button class="btn">6</button>
+            <button class="btn">7</button>
+            <button class="btn">8</button>
+            <button class="btn">9</button>
+            <button class="btn">10</button>
+            <button class="right_arrow">
+              <img src="../utils/long-arrow-pointing-to-the-right.svg" alt="left_arraow"/>
+            </button>
+          </div>
 </body>
 </html>
