--- a/khushi/task2/imgborder.html
+++ b/khushi/task2/imgborder.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Document</title>
     <style>
         .text{
             text-align: center;
@@ -18,17 +18,17 @@
             /*border-img line*/
             border-image: url(../../css/border_1.webp) 350 space;
         }
-        .img_1{
+       /* .img_1{
             height: 200px;
             width: 300px;
             position: absolute;
             left: 30%;
             border-image: url(../../css/border_1.webp)100px round;
-        }
+        }*/
     </style>
 </head>
 <body>
     <h2 class="text">happy holi.</h2>
-    <img src="../../css/holi_img.jpg" class="img_1">
+    <!--img src="../../css/holi_img.jpg" class="img_1"-->
 </body>
-</html>
+</html> 
