--- a/wedsite/Project.html
+++ b/wedsite/Project.html
@@ -15,7 +15,7 @@
           <button class="A">Copy</button>
           <button class="B">CY</button>
            </div>
-         <div class="C">
+         <div class="khush">
             Linkedin /Twitter / instagram
          </div>
         </nav>
