--- a/wibside/project_hospital/aafiya.html
+++ b/wibside/project_hospital/aafiya.html
@@ -336,6 +336,35 @@
             <span class="dot"></span>
           </div>
     </div>
+    <div class="parents6">
+        <p class="A1">
+            Hospitals
+        </p>
+        <h2 class="doctor-3">Recommended <span class="card4">Hospitals</span></h2>
+    </div>
+    <div class="parents7">
+        <div class="imgcard_1">
+           <img src="../../images/img6.jpeg" class="img-13">
+           <h2 class="doctor-4">Apollo Hospital</h2>
+           <p class="doctor-5">Bangalore</p>
+        </div>
+        <div class="imgcard_1">
+            <img src="../../images/img7.jpeg" class="img-13">
+            <h2 class="doctor-6">Medanta Hospital</h2>
+            <p class="doctor-5">Gurgaon</p>
+        </div>
+        <div class="imgcard_1">
+            <img src="../../images/img8.jpeg" class="img-13">
+            <h2 class="doctor-4">Jslok Hospital</h2>
+            <p class="doctor-5">Mumbai</p>
+        </div>
+    </div>
+    <div class="pagination-dots-2">
+        <span class="dot active"></span>
+        <span class="dot"></span>
+        <span class="dot"></span>
+      </div>
+      <p class="doctor-7">Don't hesitate, contact us for better help and services.<u>Explore all Hospitals</u></p>
 </body>
 
 </html>
