--- a/wibside/project_hospital/aafiya.html
+++ b/wibside/project_hospital/aafiya.html
@@ -55,7 +55,7 @@
                 <li>Blog</li>
                 <li>Request A Quote</li>
             </ul>
-            <div class="D">
+            <div class="k">
                 <input type="search" placeholder="🔍 search">
             </div>
         </div>
@@ -91,6 +91,8 @@
             </ul>
         </div>
     </nav>
+    
+
     <div class="parents3">
         <div class="child_7">
             <h1 class="H">Treatment Overview.</h1>
@@ -256,7 +258,7 @@
 
                 <div  class="boxchild_2">
                      <div class="home-1">
-                        <h4>Underwent Colonoscopy and <br>Medical Management</h4>
+                        <h4 class="k1">Underwent Colonoscopy and <br>Medical Management</h4>
                         <div class="home-2">
                             <img src="../../images/Quotes (1).svg" class="img-11">
                         </div>
@@ -365,6 +367,18 @@
         <span class="dot"></span>
       </div>
       <p class="doctor-7">Don't hesitate, contact us for better help and services.<u>Explore all Hospitals</u></p>
+
+
+      <div class="parents8">
+        <p class="text-3">Stay healthy and strong to enjoy life </p>
+        <h1 class="text-4">We have team of healthcare experts</h1>
+        <div class="text-5">
+        <button class="Bottun-1">Get In Touch</button> 
+        <div class="text-6">
+            <h3 class="text-7">+91 898 777 9999 </h3>
+        </div>
+        </div>       
+      </div>
 </body>
 
 </html>
