This my most beautiful and hardworking project

--- a/wibside/project_hospital/aafiya.html
+++ b/wibside/project_hospital/aafiya.html
@@ -357,7 +357,7 @@
         </div>
         <div class="imgcard_1">
             <img src="../../images/img8.jpeg" class="img-13">
-            <h2 class="doctor-4">Jslok Hospital</h2>
+            <h2 class="doctor-4">Jaslok Hospital</h2>
             <p class="doctor-5">Mumbai</p>
         </div>
     </div>
