this is my most beautiful and hardworking project

--- a/wibside/project_hospital/aafiya.html
+++ b/wibside/project_hospital/aafiya.html
@@ -45,7 +45,7 @@
     </nav>
     <nav>
         <div class="child_2">
-            <ul>
+            <ul >
                 <li>Home</li>
                 <li>About Us</li>
                 <li>Treatments +</li>
@@ -380,7 +380,73 @@
         </div>       
       </div>
       <div class="parents9">
-        
+        <!---- this 1st main div-->
+
+        <div class="parents10">
+
+            <div class="child-31">
+                <p class="link">Importance Links</p>
+                <ul class="section">
+                    <li class="l">Home</li>
+                    <li class="l" >About Us</li>
+                    <li class="l">FAQs</li>
+                    <li class="l">Blog</li>
+                    <li class="l">Contact Us</li>
+                </ul>
+            </div>
+            <div class="child-32">
+                <p class="link">Top Hospitals</p>
+                <ul class="section">
+                    <li class="l">Apollo Hospital Delhi</li>
+                    <li class="l" >Medanta Hospital Gurgaon</li>
+                    <li class="l">Medanta Hospital Gurgaon</li>
+                    <li class="l" >Medanta Hospital Gurgaon</li>
+                    <li class="l">Max Hospital Delhi</li>
+                    <li class="l">Jaslok Hospital Mumbai</li>
+                    <li class="l">Artemis Hospital Gurgaon</li>
+                    <li class="l">Fortis Hospital Gurgaon</li>
+                    <li class="l">View All</li> 
+                </ul>
+            </div>
+            <div class="child-33">
+            <p class="link">Top Specialist Treatments</p>
+            <ul class="section">
+            <li class="l">Knee Replacement Surgeon</li>
+            <li class="l">Urologist</li>
+            <li class="l">Spine Surgeon</li>
+            <li class="l">ENT Surgeon</li>
+            <li class="l">Orthopedic</li>
+            <li class="l">Cardiologist</li>
+            <li class="l">View All</li>
+            </ul>
+            </div>
+            <div class="child-34">
+                <p class="link-2">Medical Tourism Destinations</p> 
+                <ul class="section">
+                    <li class="l">Medical Tourism in India</li>
+                    <li class="l">Medical Tourism  in Sri Lanke </li>
+                    <li class="l">Medical Tourism in UAE</li>
+                    <li class="l">View All</li> 
+                </ul>
+            </div>
+            <!--this 3rd small div-->
+            <div class="child-35">
+                <div class="link4">
+                    <img src="../../images/img11.jpeg" class="img-31">
+                    <div class="link6">
+                    <p class="link5">Are you docotr/hospital?</p>
+                    <h5 class="link7">Join Mediretreats</h5>
+                    </div>
+                </div>
+                <p class="link8">
+                Lorem ipsum dolor sit ame ipsum dolor sit amet  elit deserunt fugiat .</p>
+            </div>
+        </div>
+        <hr class="link3"/>
+        <!--this 2nd main div-->
+        <div class="parents11">
+
+        </div>
       </div>
 </body>
 
