The website has been successfully completed.

--- a/wibside/project_hospital/aafiya.html
+++ b/wibside/project_hospital/aafiya.html
@@ -99,12 +99,12 @@
             <p class="p7">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae molestiae veritatis quidem dolorum ut
                 neque velit maiores doloribus, ducimus laboriosam tenetur dignissimos at! Saepe soluta dignissimos alias
-                magnam! Consectetur, in!
+                magnam! Consectetur, in!<br><br>
             </p>
             <p class="p7">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti culpa hic accusamus
                 facere cupiditate nostrum veritatis sequi fugiat! Iure ratione nemo laborum id sunt maiores eius
-                consequatur aperiam, velit quaerat.
+                consequatur aperiam, velit quaerat.<br><br>
             </p>
             <p class="p7">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi est porro vero excepturi molestiae
@@ -217,7 +217,7 @@
                 <hr class="fisthr"/>
                 <p class="p10"><span class="span1">+</span>  How do i know the cline i am searching is verified?</p>
                 <hr class="Secondhr"/>
-         <p class="p11"><span class="span1">+</span> l can't travel alone so can some famaily member or friend member of mine accounty me?</p>
+         <p class="p11"><span class="span1">+</span> l can't travel alone so can some famaily member or friend of mine accounty me?</p>
          <hr class="threehr"/>
                <p class="p12"><span class="span1">-</span> can lsee my docoter l decide and what about my post recovery?</p>
                 <hr class="fourhr"/> 
@@ -251,7 +251,7 @@
                         <img src="../../images/woman.png" class="img-10">
                         <div class="Y">
                            <p class="u"> Luke Olfert</p>
-                            New York,USA
+                            Khushi ,UP
                         </div>
                     </div>
                     </div>
@@ -265,7 +265,7 @@
                      </div>
                      <p class="home-3">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius nisi, fugiat harum quibusdam, perspiciatis officiis sed ad architecto molestiae aliquid necessitatibus, aliquam ipsum tenetur adipisci? Error dolorum exercitationem id
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus quod impedit t
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                      </p>
                      <div class="home-4">
                         <img src="../../images/woman.png" class="img-12">
@@ -273,7 +273,7 @@
                             <p class="home-6">
                             Luke Olfert
                             </p>
-                          Sydney,Australia                        
+                          Khushi,UP                        
                         </div>
                      </div>
                 </div>
@@ -443,11 +443,49 @@
             </div>
         </div>
         <hr class="link3"/>
+
+        <div class="parents-12">
+        <!--this 1st main div-->
+        <div class="child-36">
+            <img src="../../images/Aafiya Logo.svg" class="img-40">
+        </div>
         <!--this 2nd main div-->
-        <div class="parents11">
+        <div class="child-37">
+        <h3 class="link-9">About Aafiya Mediretreats</h3>
+        <p class="link-10">
+            Aafiya Mediretreats is a free, confidential, independent resource for<br> and industry providers. Our mission is to provide a central portal whe<br> patients,Medical Tourism providers, hospitals, clinics, employers, and<br>ance companies can all find the information they need. Our site focu<br>ients looking for specific knowledge in the fields of medical touri<br>urism, and health tourism.
+        </p>
 
         </div>
-      </div>
+        <!--this3rd main div-->
+        <div class="child-38">
+           <h3  class="link-15">Follow Us On</h3>
+           <div class="child-39">
+           <div class="FB">
+            <img src="../../images/img16.jpeg" class="img-33">
+           </div>
+           <div class="TT">
+            <img src="../../images/img15.jpeg" class="img-34">
+           </div>
+           <div class="IG">
+           <img src="../../images/img14.jpeg" class="img-35">
+           </div>
+          <div class="UT">
+        <img src="../../images/img17.jpeg" class="img-36">
+        </div>
+        </div>
+        <p class="link-12">Customer Service</p>
+        <p class="link-13">+919856555666</p>
+    
+    </div>
+    </div>
+    <div class="parents13">
+        <div class="footerchild">
+        <div class="footerchild-1">Copyrigh @ 2020 Aafiya Mediretreats. All Rights reserved. Designed by Ideamagix</div>
+        <div class="footerchild-2">Terms And Conditions</div>
+        <div class="footerchild-3">Privacy policy</div>
+        </div>
+    </div>
 </body>
 
 </html>
