--- a/wedsite/Project.html
+++ b/wedsite/Project.html
@@ -21,7 +21,7 @@
         </nav>
         <div class="main_1">
             <div class="img_logo">
-                <img src="../css/woman.png"  class="img">
+                <img src="../images/woman.png"  class="img">
                 <div class="imgtext">Khushi yadav</div>
             </div>
             <div class="text_1">
