--- a/wedsite/website2.html
+++ b/wedsite/website2.html
@@ -38,7 +38,7 @@
 
     </p>
     <div class="menu">
-    <img src="https://c4.wallpaperflare.com/wallpaper/882/314/460/falling-coffee-high-resolution-images-wallpaper-preview.jpg">
+    <img src="../images/11.jpg">
     <figcaption><u>Happiness in my cup</u>:</figcaption>
     </div>
     
@@ -52,7 +52,7 @@
     <h2 class="w"><u>Menu</u>:-</h2>
    
     <div class="khushi">
-        <img src="../360_F_685036582_QOdhu9QUVJQ2JdJJz9rhPbVLtPZ7KNNQ - Copy.jpg">
+        <img src="../images/12.jpg">
         <div class="text">
             <h2><u>Mocha</u></h2><br>
             cold and hote coffee<br>
@@ -62,7 +62,7 @@
         </div>
     </div>
     <div class="khushi">
-        <img src="../download - Copy.jpeg">
+        <img src="../images/13.jpeg">
         <div class="text">
             <h1><u>Frappuccino</u></h1><br>
             Iced coffee,whipped and <br>cream syrup<br>
@@ -70,7 +70,7 @@
         </div>
     </div>
     <div class="khushi">
-        <img src="../coffee-cappuccino-hd-hjh5dfoa0mcocfrf.jpg">
+        <img src="../images/14.jpg">
         <div class="text">
             <h2><u>Cappuccino</u></h2><br>
             stramed milk,milk foam,<br>
@@ -79,7 +79,7 @@
         </div>
     </div>
     <div class="khushi">
-        <img src="../images (2).jpeg">
+        <img src="../images/15.avif">
         <div class="text">
             <h1><u>Americano</u></h1><br>
             one shot espresso diluted<br>
