--- a/wibside/project_hospital/aafiya.html
+++ b/wibside/project_hospital/aafiya.html
@@ -11,12 +11,15 @@
 <body>
     <nav>
         <div class="parents">
+            <div class="parents_1">
             <div class="child1">
                 <img src="../../images/Aafiya Logo.svg" class="img-1">
             </div>
             <div class="child2">
                 <img src="../../images/img1.jpeg" class="img-2">
             </div>
+            </div>
+            <div class="parents1_1">
             <div class="child3">
                 <img src="../../images/Book.svg" class="img-3">
                 <div class="A">
@@ -40,6 +43,7 @@
             </div>
             <div class="child6">
                 <img src="../../images/India.svg" class="img-6">
+            </div>
             </div>
         </div>
     </nav>
