--- a/khushi/task2/Nav.html
+++ b/khushi/task2/Nav.html
@@ -36,18 +36,18 @@
       <h1>Rise above your challenges<br><span class="A2">Join the tribe</span></h1>
       <button class="B2">JOIN COMMUNITY-></button>
     <div class="img">
-      <img src="../../community1.webp" class="box2">
-      <img src="../../community11.webp" class="box3">
+      <img src="../../images/community1.webp" class="box2">
+      <img src="../../images/community11.webp" class="box3">
     </div>
   </div>
   <div class="container2">
     <div class="img">
-    <img src="../../community2.webp" class="box4">
-    <img src="../../community4.webp" class="box5">
+    <img src="../../images/community2.webp" class="box4">
+    <img src="../../images/community4.webp" class="box5">
     </div>
     <div class="img2">
-    <img src="../../community5.webp" class="box6">
-    <img src="../../community8.webp" class="box7">
+    <img src="../../images/community5.webp" class="box6">
+    <img src="../../images/community8.webp" class="box7">
     </div>
     
   </div>
