--- a/wedsite/Project.html
+++ b/wedsite/Project.html
@@ -40,12 +40,12 @@
         </div>
         <div class="parents_3">
         <div class="parents_2">
-                <img src="../css/national bank.jpg" class="img_1">
-                <img src="../css/mattered.jpg" class="img_2">
-                <img src="../css/Coca-Cola_logo.svg.png" class="img_3">
-                <img src="../css/adobe.webp" class="img_4">
-                <img src="../css/subway.png" class="img_5">
-                <img src="../css/codecademy.webp" class="img_6">
+                <img src="../images/16.jpg" class="img_1">
+                <img src="../images/17.jpg" class="img_2">
+                <img src="../images/18.png" class="img_3">
+                <img src="../images/19.webp" class="img_4">
+                <img src="../images/20.png" class="img_5">
+                <img src="../images/21.webp" class="img_6">
         </div>
        
         <div class="text_2">
@@ -59,26 +59,26 @@
         </div>
         <div class="parents_4">
             <div box_1>
-              <img src="../css/ux.png" class="img_7">
+              <img src="../images/ux.png" class="img_7">
               <h3>UX & UI</h3>
               <p>
                 user interface (UI) refers to<br> the interactivity, look, and <br>feel of a product <br>screen or web page.
               </p> 
             </div>
             <div class="box_2">
-                <img src="../css/mobile.png" class="img_8">
+                <img src="../images/mobile.png" class="img_8">
                 <h3>Wed &mobile App</h3>
                 <p>Yes, UI/UX design is considered a <br> lucrative and rewarding career<br> path for india</p>
                 
             </div>
             <div class="box_3">
-                <img src="../css/creative.avif" class="img_9">
+                <img src="../images/creative.avif" class="img_9">
                 <h3>Desing & Creative</h3>
                 <p>individuals with a<br> passion for creativity<br>, problem-solving, and technolo</p>
 
             </div>
             <div box_4>
-                <img src="../css/development.png" class="img_10">
+                <img src="../images/development.png" class="img_10">
                 <h3>Development</h3>
                 <p>individuals with a<br> passion for creativity,<br> problem-solving, and technology.</p>
             </div>
