--- a/wibside/project_hospital/index.html
+++ b/wibside/project_hospital/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../../css/aafiya.css">
+    <link rel="stylesheet" href="./index.css">
 </head>
 
 <body>
@@ -13,36 +13,36 @@
         <div class="parents">
             <div class="parents_1">
             <div class="child1">
-                <img src="../../images/Aafiya Logo.svg" class="img-1">
+                <img src="./images/Aafiya Logo.svg" class="img-1">
             </div>
             <div class="child2">
-                <img src="../../images/img1.jpeg" class="img-2">
+                <img src="./images/img1.jpeg" class="img-2">
             </div>
             </div>
             <div class="parents1_1">
             <div class="child3">
-                <img src="../../images/Book.svg" class="img-3">
+                <img src="./images/Book.svg" class="img-3">
                 <div class="A">
                     <p class="p1">Second Medical Opinio</p>
                     <p class="p2"> Book consultation</p2>
                 </div>
             </div>
             <div class="child4">
-                <img src="../../images/Call.svg" class="img-4">
+                <img src="./images/Call.svg" class="img-4">
                 <div class="B">
                     <p class="p3">Call Us On </p>
                     <p class="p4">985 896 2222</p>
                 </div>
             </div>
             <div class="child5">
-                <img src="../../images/img2.jpeg" class="img-5">
+                <img src="./images/img2.jpeg" class="img-5">
                 <div class="C">
                     <p class="p5">Email Us On </p>
                     <p class="p6">info@mediretreats.com</p>
                 </div>
             </div>
             <div class="child6">
-                <img src="../../images/India.svg" class="img-6">
+                <img src="./images/India.svg" class="img-6">
             </div>
             </div>
         </div>
@@ -116,7 +116,7 @@
             </p>
         </div>
         <div class="child_8">
-            <img src="../../images/img4.jpg" class="img-7">
+            <img src="./images/img4.jpg" class="img-7">
         </div>
     </div>
     <hr class="logHr"/>
@@ -247,12 +247,12 @@
                     <div class="O">
                     <h4>Underwent procedure for<br> retinal detechment</h4>
                     <div class="X">
-                        <img src="../../images/Quotes (1).svg" class="img-8">
+                        <img src="./images/Quotes (1).svg" class="img-8">
                     </div>
                     </div>
-                    <img src="../../images/img5.jpg " class="img-9">
+                    <img src="./images/img5.jpg " class="img-9">
                     <div class="Z">
-                        <img src="../../images/woman.png" class="img-10">
+                        <img src="./images/woman.png" class="img-10">
                         <div class="Y">
                            <p class="u"> Luke Olfert</p>
                             Khushi ,UP
@@ -264,7 +264,7 @@
                      <div class="home-1">
                         <h4 class="k1">Underwent Colonoscopy and <br>Medical Management</h4>
                         <div class="home-2">
-                            <img src="../../images/Quotes (1).svg" class="img-11">
+                            <img src="./images/Quotes (1).svg" class="img-11">
                         </div>
                      </div>
                      <p class="home-3">
@@ -272,7 +272,7 @@
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                      </p>
                      <div class="home-4">
-                        <img src="../../images/woman.png" class="img-12">
+                        <img src="./images/woman.png" class="img-12">
                         <div class="home-5">
                             <p class="home-6">
                             Luke Olfert
@@ -350,17 +350,17 @@
     </div>
     <div class="parents7">
         <div class="imgcard_1">
-           <img src="../../images/img6.jpeg" class="img-13">
+           <img src="./images/img6.jpeg" class="img-13">
            <h2 class="doctor-4">Apollo Hospital</h2>
            <p class="doctor-5">Bangalore</p>
         </div>
         <div class="imgcard_1">
-            <img src="../../images/img7.jpeg" class="img-13">
+            <img src="./images/img7.jpeg" class="img-13">
             <h2 class="doctor-6">Medanta Hospital</h2>
             <p class="doctor-5">Gurgaon</p>
         </div>
         <div class="imgcard_1">
-            <img src="../../images/img8.jpeg" class="img-13">
+            <img src="./images/img8.jpeg" class="img-13">
             <h2 class="doctor-4">Jaslok Hospital</h2>
             <p class="doctor-5">Mumbai</p>
         </div>
@@ -436,7 +436,7 @@
             <!--this 3rd small div-->
             <div class="child-35">
                 <div class="link4">
-                    <img src="../../images/img11.jpeg" class="img-31">
+                    <img src="./images/img11.jpeg" class="img-31">
                     <div class="link6">
                     <p class="link5">Are you docotr/hospital?</p>
                     <h5 class="link7">Join Mediretreats</h5>
@@ -451,7 +451,7 @@
         <div class="parents-12">
         <!--this 1st main div-->
         <div class="child-36">
-            <img src="../../images/Aafiya Logo.svg" class="img-40">
+            <img src="./images/Aafiya Logo.svg" class="img-40">
         </div>
         <!--this 2nd main div-->
         <div class="child-37">
@@ -466,16 +466,16 @@
            <h3  class="link-15">Follow Us On</h3>
            <div class="child-39">
            <div class="FB">
-            <img src="../../images/img16.jpeg" class="img-33">
+            <img src="./images/img16.jpeg" class="img-33">
            </div>
            <div class="TT">
-            <img src="../../images/img15.jpeg" class="img-34">
+            <img src="./images/img15.jpeg" class="img-34">
            </div>
            <div class="IG">
-           <img src="../../images/img14.jpeg" class="img-35">
+           <img src="./images/img14.jpeg" class="img-35">
            </div>
           <div class="UT">
-        <img src="../../images/img17.jpeg" class="img-36">
+        <img src="./images/img17.jpeg" class="img-36">
         </div>
         </div>
         <p class="link-12">Customer Service</p>
