--- a/khushi/task2/Form.html
+++ b/khushi/task2/Form.html
@@ -18,7 +18,7 @@
             <br><br>
             <label>Last Name :</label>
             <br>
-            <input type="text" placeholder="Enter Your Last Name">
+            <input type="text" placeholder="Enter Your Last name ">
             <br><br>
             <label>Your Age :</label>
             <br>
