--- a/khushi/task2/multipleexam.html
+++ b/khushi/task2/multipleexam.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../../css/multipleexam.css">
 </head>
 <body>
-    <img src="../../css/halolab.jpg" class="img_1">
+    <img src="../../images/halolab.jpg" class="img_1">
     <div class="container">
         <button> < </button>
         <button>...</button>
