--- a/task_perform/prectic/Display.html
+++ b/task_perform/prectic/Display.html
@@ -8,11 +8,11 @@
 </head>
 <body>
 <div class="parent">
-    <div class="child"></div>
-    <div  class="child"></div>
-    <div class="child"></div>
-    <div class="child"></div>
-    <div class="child"></div>
+    <div class="child">1</div>
+    <div  class="child">2</div>
+    <div class="child">3</div>
+    <div class="child">4</div>
+    <div class="child">5</div>
 </div>
 </body>
 </html>
