--- a/khushi/figure.html
+++ b/khushi/figure.html
@@ -19,7 +19,7 @@
     </style>
 </head>
 <body>
-    <h1 border="3">ISKCO  TEMPLE</h1>
+    <h1 class="border-3">ISKCO  TEMPLE</h1>
     
     <figure>
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTXr0qRQ2VZYOc3_odzd62cjdWM9RDXem9Usw&s">
