--- a/khushi/form/form.html
+++ b/khushi/form/form.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="form.css">
+    <link rel="stylesheet" href="../../css/Form.css">
 </head>
 <body>
     <form>
         <fieldset>
             <legend>Employee Datails</legend>
         <label>First Name</label>
-        <input type="text" placeholder="enter your First name " required><br>
+        <input type="text" placeholder="Enter Your Name" required><br>
         <br>
         <label>Last Name</label>
-        <input type=" text" placeholder=" enter your Last name" required/><br>
+        <input type=" text" placeholder=" Enter Your last name" required/><br>
         <br>
         <label>Gender</label>
         <input type="radio"/>
@@ -25,10 +25,10 @@
         
         <br>
         <label>Employee id</label>
-        <input type="Number" placeholder="enter your id"/ required minlength="5"><br>
+        <input type="Number" placeholder="enter your id"required minlength="5"><br>
         <br>
         <label>Desination</label>
-        <input type="Text" placeholder="enter your desination" required/><br>
+        <input type="Text" placeholder="enter your  phonr  desination" required/><br>
         <br>
         <label> Phone No</label>
         <input type="Tel" placeholder="enert your number" required maxlength=""/><br>
