--- a/khushi/position2.html
+++ b/khushi/position2.html
@@ -10,6 +10,11 @@
 <body>
     <div class="box static">static position</div>
     <div class="box relative">relative position</div>
+    <di class="main">
+        <div class="1">
+            <div class="home"></div>
+        </div>
+    </di>
     
     
 
