--- a/Opacity1.html
+++ b/Opacity1.html
@@ -31,6 +31,7 @@
 <body>
     <h1 class="container"></h1>
     <h2 class="main"></h2>
-    <h3 class="transparent"></h3>
+    <h3 class="transparent"></h>
+        
 </body>
 </html>
