--- a/khushi.html
+++ b/khushi.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .A{
+            background-image: linear-gradient( green,red);
+            background-color: red;
+        }
+    </style>
     
     </head>
 <body>
-   <img src=
+   <div class="A"></div>
  </body>       
 </html>
