--- a/wibside/hover/hover.html
+++ b/wibside/hover/hover.html
@@ -19,8 +19,8 @@
                  
             color: black !important;
             background-color: brown;
-            margin: 40px;
-            padding: 10px;
+            margin: 50px;
+            padding: 20px;
          }
          .container:hover{
             color: blueviolet;
@@ -31,6 +31,6 @@
     </style>
 </head>
 <body>
-    <h2 class="container"> wellcome to Home</h2>
+    <h2 class="container"> welcome to my on home</h2>
 </body>
 </html>
