--- a/khushi/animation3.html
+++ b/khushi/animation3.html
@@ -8,5 +8,11 @@
 </head>
 <body>
     <h1 class="logo">ANIMATION</h1>
+    <div class="parents">
+        <div class="parents_1">
+            <div class="child_1"></div>
+            <div class="child_2"></div>
+        </div>
+    </div>
 </body>
 </html>
