--- a/task_perform/prectic/animation.html
+++ b/task_perform/prectic/animation.html
@@ -4,14 +4,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../../css/animation.css">
+    <link rel="stylesheet" href="../../css/animation_3.css">
 </head>
 <body>
-    <p class="hello"> hello</p>
-    <p class="animation">Welcome To Home</p>
-    <br>
-    <p class="heading">Heading</p>
-    
-    
+   <div class="wrapper">
+      <div class="item item1">
+        <img src="../../images/11.jpg " class="img10">
+      </div>
+      <div class="item item2">
+        <img src="../../images/12.jpg" class="img1">
+      </div>
+      <div class="item item3">
+        <img src="../../images/13.jpeg" class="img2">
+      </div>
+      <div class="item item4">
+        <img src="../../images/14.jpg" class="img3">
+      </div>
+      <div class="item item5">
+        <img src="../../images/15.avif" class="img4">
+      </div>
+      <div class="item item6">
+        <img src="../../images/16.jpg" class="img5">
+      </div>
+      <div class="item item7">
+        <img src="../../images/17.jpg" class="img6">
+      </div>
+        <div class="item item8">
+          <img src="../../images/18.png" class="img7">
+        </div>
+        <div class="item item9">
+          <img src="../../images/19.webp"class="img8">
+        </div>
+        <div class="item item10">
+          <img src="../../images/20.png" class="img9">
+        </div>
+        <div class="item item11">
+          <img src="../../images/20.png" class="img9">
+        </div>
+   </div>
 </body>
 </html>
