--- a/task_perform/prectic/animation.html
+++ b/task_perform/prectic/animation.html
@@ -8,37 +8,37 @@
 </head>
 <body>
    <div class="wrapper">
-      <div class="item item1">
+      <div class="item-item">
         <img src="../../images/11.jpg " class="img10">
       </div>
-      <div class="item item2">
+      <div class="item-item">
         <img src="../../images/12.jpg" class="img1">
       </div>
-      <div class="item item3">
+      <div class="item-item">
         <img src="../../images/13.jpeg" class="img2">
       </div>
-      <div class="item item4">
+      <div class="item-item">
         <img src="../../images/14.jpg" class="img3">
       </div>
-      <div class="item item5">
+      <div class="item-item">
         <img src="../../images/15.avif" class="img4">
       </div>
-      <div class="item item6">
+      <div class="item-item">
         <img src="../../images/16.jpg" class="img5">
       </div>
-      <div class="item item7">
+      <div class="item-item">
         <img src="../../images/17.jpg" class="img6">
       </div>
-        <div class="item item8">
+        <div class="item-item">
           <img src="../../images/18.png" class="img7">
         </div>
-        <div class="item item9">
+        <div class="item-item">
           <img src="../../images/19.webp"class="img8">
         </div>
-        <div class="item item10">
+        <div class="item-item">
           <img src="../../images/20.png" class="img9">
         </div>
-        <div class="item item11">
+        <div class="item-item">
           <img src="../../images/20.png" class="img9">
         </div>
    </div>
