--- a/task_perform/prectic/animation.html
+++ b/task_perform/prectic/animation.html
@@ -38,8 +38,24 @@
         <div class="item-item">
           <img src="../../images/20.png" class="img9">
         </div>
+       
         <div class="item-item">
           <img src="../../images/20.png" class="img9">
+        </div>
+        <div class="item-item">
+          <img src="../../images/20.png" class="img10">
+        </div>
+        <div class="item-item">
+          <img src="../../images/20.png" class="img11">
+        </div>
+        <div class="item-item">
+          <img src="../../images/20.png" class="img12">
+        </div>
+        <div class="item-item">
+          <img src="../../images/20.png" class="img13">
+        </div>
+        <div class="item-item">
+          <img src="../../images/20.png" class="img14">
         </div>
    </div>
 </body>
