--- a/task_perform/prectic/animation.html
+++ b/task_perform/prectic/animation.html
@@ -57,6 +57,15 @@
         <div class="item-item">
           <img src="../../images/20.png" class="img14">
         </div>
+        <div class="item-item">
+          <img src="../../images/20.png" class="img15">
+        </div>
+        <div class="item-item">
+          <img src="../../images/20.png" class="img16">
+        </div>
+        <div class="item-item">
+          <img src="../../images/20.png" class="img17">
+        </div>
    </div>
 </body>
 </html>
