--- a/khushi/form/table.html
+++ b/khushi/form/table.html
@@ -17,14 +17,23 @@
     </style>
 </head>
 <body>
-    <table border="3">
+    <table border="4">
         <tr>
         <th>NAME</th>
         <th>ID</th>
         <th>AADRESS</th>
         <th>PHONE NO</th>
+        <th>NAME</th>
+        <th>ID</th>
+        <th>AADRESS</th>
+        <th>PHONE NO</th>
+
         </tr>
         <tr>
+            <td>anjali</td>
+            <td>123</td>
+            <td>pouiytewwrh</td>
+            <td>1234567890</td>
             <td>anjali</td>
             <td>123</td>
             <td>pouiytewwrh</td>
