--- a/khushi/form/table.html
+++ b/khushi/form/table.html
@@ -7,12 +7,15 @@
     <style>
     
       th{
-        width: 100px;
-        height: 10px;
+        width: 200px;
+        height: 20px;
       }
       table:hover{
         color: blueviolet;
         background-color: skyblue;
+      }
+      body{
+        margin: 100px 80px;
       }
     </style>
 </head>
