--- a/khushi/form/table.html
+++ b/khushi/form/table.html
@@ -42,7 +42,16 @@
             <td>pouiytewwrh</td>
             <td>1234567890</td>
         </tr>
-
+          <tr>
+            <td>khushi</td>
+            <td>124</td>
+            <td>pouiytewwrh</td>
+            <td>730421279</td>
+            <td>anshu</td>
+            <td>124</td>
+            <td>pouiytewwrh</td>
+            <td>1234567890</td>
+        </tr>
     </table>
 </body>
 </html>
