--- a/khushi/form/masai.html
+++ b/khushi/form/masai.html
@@ -532,6 +532,60 @@
  </div>
 </body>
 
+
+<div class="position_1">
+    <div class="K1">
+        <img src="../utils/SDE-2.jpeg" class="SDE-1">
+    </div>
+    <div class="K2">
+        <img src="../utils/img_xyz3.jpeg" class="rahul-kumar">
+    </div>
+    <div class="K3">
+        <h1 class="qotes-1">"</h1>
+        <p class="A1">Masai Schaool pushed me beyoned limits<br>
+            transforming my life and career. Grateful<br>
+            for the journey and new beginnings.
+        </p>
+        <h3 class="A2"> Rahul-Kumar</h3>
+    </div>
+</div>
+
+<div class="position_1">
+    <div class="k4">
+        <img src="../utils/SDE-1.jpeg" class="SDE-2">
+    </div>
+    <div class="K5">
+        <img src="../utils/img_xyz2.jpeg" class="rahul-kumar">
+    </div>
+    <div class="K6">
+        <h1 class="qotes-1">"</h1>
+        <p class="A4">Facing financial challenges i look up<br>
+            teaching to support my family losing my <br>
+            job to covid was tough but, i pivoted to<br>
+            tech now as an sde-1 at graymatter..... </p>
+        <h3 class="A2"> Rahul-Kumar</h3>
+    </div>
+</div>
+
+<div class="position_1">
+    <div class="k7">
+        <img src="../utils/data analyst.jpeg" class="SDE-3">
+    </div>
+    <div class="K8">
+        <img src="../utils/dataana_img.jpeg" class="rahul-kumar-1">
+    </div>
+    <div class="K9">
+        <h1 class="qotes-1">"</h1>
+        <p class="A4">After lilited job opportunities past<br>-college
+            and disrupted government exam <br>plans due
+            to the pandemic i pivoted to data analytics
+            turning challenges into success.. </p>
+        <h3 class="A2"> Rahul-Kumar</h3>
+    </div>
+</div>
+
+</div>
+
 </html>
 </body>
 </html>
