--- a/khushi/form/Flex2.html
+++ b/khushi/form/Flex2.html
@@ -32,6 +32,9 @@
         <div class="child">3</div>
         <div class="child">4</div>
         <div class="child">5</div>
+        <div class="child">6</div>
+        <div class="child">7</div>
+        <div class="chuld">8</div>
     </div>
 </body>
 </html>
