--- a/khushi/types.html
+++ b/khushi/types.html
@@ -15,6 +15,15 @@
     <input type="email">
     <input type="month">
     <input type="number">
+     <input type="button">
+    <input type="checkbox">
+
+    <!---normal exmal-->
+    <input type="color1">
+    <input type="date1">
+    <input type="email1">
+    <input type="month1">
+    <input type="number1">
     <!-- <input type="text"> -->
 
 </body>
