--- a/wibside/exampleofhtml.html
+++ b/wibside/exampleofhtml.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet " href="../xyz.css">
-
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Waving Wine Glass</title>
+  <link rel="stylesheet" href="../css/example.css">
 </head>
 <body>
-
-    
+  <div class="wine-glass">
+    <div class="glass">
+      <div class="wine"></div>
+    </div>
+    <div class="stem"></div>
+    <div class="base"></div>
+  </div>
 </body>
 </html>
