--- a/wibside/exampleofhtml.html
+++ b/wibside/exampleofhtml.html
@@ -8,11 +8,9 @@
 </head>
 <body>
   <div class="wine-glass">
-    <div class="glass">
       <div class="wine"></div>
     </div>
-    <div class="stem"></div>
-    <div class="base"></div>
-  </div>
+    <div class="glass-stem"></div>
+    <div class="glass-base"></div>
 </body>
 </html>
