--- a/wibside/project_hospital/index.html
+++ b/wibside/project_hospital/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en"> <button onclick="myFunction()">Toggle dark mode</button>
+<html lang="en"> 
 
 <head>
     <meta charset="UTF-8">
@@ -11,7 +11,9 @@
 <body>
     <nav>
         <div class="parents">
+            <!---
              <button onclick="myFunction()">Toggle dark mode</button>
+        -->
             <div class="parents_1">
             <div class="child1">
                 <img src="./images/Aafiya Logo.svg" class="img-1">
