--- a/task_perform/newbar.html
+++ b/task_perform/newbar.html
@@ -62,6 +62,10 @@ P{
             <img src="../images/a-cup-of-hot-coffee-with-coffee-bean-ai-generative-photo.jpg"class="child3">
             <p>coffee</p>
         </div>
+         <div class="c">
+            <img src="../images/a-cup-of-hot-coffee-with-coffee-bean-ai-generative-photo.jpg"class="child3">
+            <p>coffee</p>
+        </div>
     </div>
 </body>
 </html>
